--- a/src/app/App.css
+++ b/src/app/App.css
@@ -465,6 +465,8 @@ body {
   background: #000222; }
 
 .App {
+  width: 100vw;
+  height: 100vh;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat; }
