--- a/src/app/styles/type.scss
+++ b/src/app/styles/type.scss
@@ -3,6 +3,7 @@
 
 $font-family-headline: "museo-sans",sans-serif;
 $font-family-body: "museo-slab",serif;
+$font-family-special: "brandon-grotesque", sans-serif;
 
 body{
 	font-family: $font-family-body;
