--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -9,6 +9,8 @@ body{
 }
 
 .App{
+	width: 100vw;
+	height: 100vh;
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
