--- a/src/app/components/projects/controls/slider/Slider.css
+++ b/src/app/components/projects/controls/slider/Slider.css
@@ -46,3 +46,5 @@
       transition: fill 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
     .slider .handle:hover svg {
       fill: white; }
+  .slider.loading .handle {
+    transition: none !important; }
