--- a/src/app/components/projects/view/View.css
+++ b/src/app/components/projects/view/View.css
@@ -1,21 +1,110 @@
+body {
+  font-family: "museo-slab", serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+  color: #000222; }
+  @media (max-width: 500px) {
+    body {
+      font-size: 16px;
+      line-height: 24px; } }
+
+.reverse-text {
+  color: #ffffff; }
+
+h1, h2, h3 {
+  font-family: "museo-sans", sans-serif;
+  letter-spacing: 1.5px; }
+
+h4, h5, h6 {
+  font-family: "museo-slab", serif;
+  letter-spacing: 1px; }
+
+h1 {
+  font-size: 58px; }
+
+h2 {
+  font-size: 42px;
+  font-weight: 900;
+  letter-spacing: 0px;
+  line-height: 48px; }
+  @media (max-width: 1025px) {
+    h2 {
+      font-size: 38px;
+      line-height: 44px; } }
+  @media (max-width: 500px) {
+    h2 {
+      font-size: 28px;
+      line-height: 36px; } }
+
+@media (max-width: 500px) {
+  h3 {
+    font-size: 21px; } }
+
+h4 {
+  font-weight: 100;
+  font-size: 24px; }
+  @media (max-width: 500px) {
+    h4 {
+      font-size: 21px; } }
+
+a:hover {
+  text-decoration: none; }
+
+header a {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1.2; }
+
+.button {
+  font-weight: 500;
+  letter-spacing: 1.2px;
+  font-family: "museo-sans", sans-serif; }
+
 .projects .view {
-  width: 50%;
+  width: 50vw;
   height: 100vh;
-  left: 50%;
   position: absolute; }
   .projects .view .line {
     background: #ffffff;
     height: 2px;
-    margin-top: 30px; }
+    margin: 0 20px; }
   .projects .view .copy {
-    width: 500px;
-    margin-left: 25px; }
+    width: 500px; }
     .projects .view .copy h2 {
       color: #ffffff; }
+      .projects .view .copy h2 svg {
+        fill: #ffffff;
+        width: 90%;
+        float: right; }
     .projects .view .copy h3 {
-      color: #ffffff; }
+      padding-top: 5px;
+      color: #ffffff;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 30px;
+      letter-spacing: 5px;
+      font-family: "museo-slab", serif; }
     .projects .view .copy h6 {
-      color: #ffffff; }
+      color: #4FB4E8;
+      margin: 10px 0 10px 0;
+      font-size: 22px;
+      line-height: 26px; }
     .projects .view .copy p {
       color: #ffffff;
       text-align: justify; }
+  .projects .view.even {
+    left: 50vw;
+    text-align: left; }
+    .projects .view.even .copy h2 svg {
+      float: left; }
+    .projects .view.even .copy p {
+      text-align-last: left; }
+  .projects .view.odd {
+    left: 0;
+    text-align: right; }
+    .projects .view.odd .copy h2 svg {
+      float: right; }
+    .projects .view.odd .copy p {
+      text-align-last: right; }
