--- a/src/app/App.css
+++ b/src/app/App.css
@@ -465,7 +465,7 @@ body {
   background: #000222; }
 
 .App {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-size: cover;
   background-position: center center;
@@ -473,6 +473,28 @@ body {
 
 .svg {
   display: flex; }
+
+.svg-color {
+  fill: #000222;
+  transition: fill 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
+  .svg-color:hover {
+    fill: #ff234a; }
+  .svg-color.whitetoblack {
+    fill: #ffffff; }
+    .svg-color.whitetoblack:hover {
+      fill: #000222; }
+  .svg-color.whitetocolor {
+    fill: #ffffff; }
+    .svg-color.whitetocolor:hover {
+      fill: #ff234a; }
+  .svg-color.blacktowhite {
+    fill: #000222; }
+    .svg-color.blacktowhite:hover {
+      fill: #ffffff; }
+  .svg-color.blacktocolor {
+    fill: #000222; }
+    .svg-color.blacktocolor:hover {
+      fill: #ff234a; }
 
 ul {
   margin: 0;
