--- a/src/app/components/three/Three.css
+++ b/src/app/components/three/Three.css
@@ -1,6 +1,7 @@
 .three {
-  position: absolute;
+  position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  overflow: hidden; }
+  overflow: hidden;
+  z-index: -1; }
