--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -4,6 +4,7 @@ $primary-color: #ff234a;
 $secondary-color: #4FB4E8;
 $third-color: #C195D3;
 $fourth-color: #df5d90;
+$light-pink: #e79bb8;
 
 $dark-grey: #505267;
 $medium-grey: #585d63;
