--- a/src/app/components/three/Three.scss
+++ b/src/app/components/three/Three.scss
@@ -1,7 +1,8 @@
 .three{
-	position: absolute;
+	position: fixed;
 	top: 0;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	overflow: hidden;
+	z-index: -1;
 }
