--- a/src/app/components/desktop/detail/Detail.scss
+++ b/src/app/components/desktop/detail/Detail.scss
@@ -3,10 +3,11 @@
 @import 'app/styles/transition.scss';
 
 
-.project{
+.detail{
 	width: 100vw;
 	height: 100vh;
-	overflow: hidden;
+	overflow-y:scroll;
+	overflow-x: hidden;
 	position: fixed;
 	top: 0vh;
 	z-index: $z-contact;
