--- a/src/app/components/background/Background.scss
+++ b/src/app/components/background/Background.scss
@@ -1,21 +1,24 @@
 .background{
-	position: fixed;
-	top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-	z-index: -2;
+	position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
 
-	video, .image{
+	#bgVideo, .image{
 		position: absolute;
-		top: 0;
-	    bottom: 0;
-	    right: 0;
-	    left: 0;
-	    margin: auto;
-	    min-height: 50%;
-	    min-width: 50%;
-		background-repeat: no-repeat;
+	    top: 50%;
+	    left: 50%;
+	    min-width: 100%;
+	    min-height: 100%;
+	    width: auto;
+	    height: auto;
+	    z-index: -100;
+	    transform: translateX(-50%) translateY(-50%);
+	    background-size: cover;
 		background-position: center center;
+		background-repeat: no-repeat;
 	}
 }
