--- a/src/app/components/desktop/detail/Detail.css
+++ b/src/app/components/desktop/detail/Detail.css
@@ -1,13 +1,14 @@
-.project {
+.detail {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
   position: fixed;
   top: 0vh;
   z-index: 500;
   transform-origin: center center;
   background: #ffffff; }
-  .project > div {
+  .detail > div {
     width: 100vw;
     height: 100vh;
     position: absolute;
