--- a/src/app/components/desktop/projects/panel/Panel.scss
+++ b/src/app/components/desktop/projects/panel/Panel.scss
@@ -1,6 +1,7 @@
 @import 'app/styles/colors.scss';
 @import 'app/styles/transition.scss';
 @import 'app/styles/type.scss';
+@import 'app/styles/mixins.scss';
 
 $panel-item-off-height: 200px;
 $panel-item-focused-height: 400px;
@@ -44,7 +45,7 @@ $panel-item-focused-height: 400px;
 				align-items: flex-start;
 				justify-content: center;
 				flex-direction: column;
-				color: mix($white,$black,15%);
+				color: rgba($white,.1);
 				position: absolute;
 				z-index: 5;
 				transform: translateY(0%);
@@ -75,7 +76,8 @@ $panel-item-focused-height: 400px;
 			.ta{
 				position: absolute;
 				top: 0;
-				width: 100%;
+				right: 0;
+				width: 75%;
 				height: 100%;
 				display: flex;
 				align-items: center;
@@ -85,27 +87,11 @@ $panel-item-focused-height: 400px;
 				transform: translateY(0%);
 				transition: all .65s $transition-ease;
 
-				&>div{
-					width: 100%;
-					height: 100%;
+				background-repeat: no-repeat;
+				background-size: contain;
+				background-position: center right;
 
-					&>div{
-						width: 100%;
-						height: 100%;
-						display: flex;
-						align-items: center;
-						justify-content: flex-end;
-
-
-						svg, svg .st0{
-							width: 75%;
-							//fill: mix($white,$black,10%);
-							fill: rgba( $white, .1);
-
-							transition: fill 1s $transition-ease;
-						}
-					}
-				}
+				@include opacity(.05);
 			}
 
 			&.focus{
@@ -129,10 +115,7 @@ $panel-item-focused-height: 400px;
 				.ta{
 					transform: translateY(7%);
 
-					svg, svg .st0{
-						//fill: mix($white,$black,15%) !important;
-						fill: rgba( $white, .2) !important;
-					}
+					@include opacity(.2);
 				}
 			}
 		}
