--- a/src/app/components/desktop/projects/view/View.scss
+++ b/src/app/components/desktop/projects/view/View.scss
@@ -19,6 +19,7 @@
 		.copy{
 			flex: 1 0 0;
 			visibility: hidden;
+			text-align: center;
 
 
 
@@ -27,10 +28,13 @@
 				opacity: .01;
 				transition: opacity $transition-speed $transition-ease 0s;
 
-				svg{
-					fill: $white;
-					width: 90%;
-					float: right;
+				.titleart{
+					background-repeat: no-repeat;
+					background-size: contain;
+					background-position: center center;
+					width: 100%;
+					height: 50px;
+					display: inline-block;
 				}
 			}
 
@@ -40,7 +44,7 @@
 				text-transform: uppercase;
 				font-weight: 700;
 				font-size: 36px;
-				line-height: 30px;
+				line-height: 40px;
 				letter-spacing: 5px;
 				font-family: $font-family-body;
 
@@ -59,8 +63,8 @@
 			}
 
 			p{
-				color: $white;
-				text-align: justify;
+				color: $light-grey;
+				text-align: center;
 
 				opacity: .01;
 				transition: opacity $transition-speed $transition-ease .4s;
@@ -92,9 +96,9 @@
 					float: left;
 				}
 
-				p{
-					text-align-last: left;
-				}
+				// p{
+				// 	text-align-last: left;
+				// }
 			}
 		}
 
@@ -108,9 +112,9 @@
 				h2 svg{
 					float: right;
 				}
-				p{
-					text-align-last: right;
-				}
+				// p{
+				// 	text-align-last: right;
+				// }
 			}
 		}
 	}
