--- a/src/app/components/project/other/Other.scss
+++ b/src/app/components/project/other/Other.scss
@@ -52,11 +52,12 @@ $other-item-border: 1px solid $black;
 		.copy{
 			position: relative;
 			height: $other-item-height;
-			width: 100%;
+			width: 90%;
+			margin: auto;
 
 			.titleart{
-				width: 100%;
-				height: 50px;
+				width: 300px;
+				height: 40px;
 				background-repeat: no-repeat;
 				background-position: center center;
 				background-size: contain;
@@ -68,7 +69,7 @@ $other-item-border: 1px solid $black;
 				text-transform: uppercase;
 				font-weight: 600;
 				letter-spacing: 5px;
-				margin-top: 5px;
+				margin-top: 10px;
 				font-size: 22px;
 			}
 
