--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -8,6 +8,8 @@ body{
 	margin: 0;
 	padding: 0;
 	background: $black;
+	width: 100%;
+	overflow-x: hidden;
 }
 
 .App{
@@ -16,15 +18,10 @@ body{
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
-	position: relative;
 	position: absolute;
 }
 
 .desktop{
-	// background: pink;
-	// width: 100%;
-	// height: 100%;
-	// position: absolute;
 	overflow: hidden;
 }
 
