--- a/src/app/components/desktop/detail/Detail.scss
+++ b/src/app/components/desktop/detail/Detail.scss
@@ -16,6 +16,7 @@
 	&>div{
 		background: $white;
 		width:100%;
+		overflow-x: hidden;
 		//min-height: 100vh;
 		//position: absolute;
 		//height:0;
