--- a/src/app/components/project/copy/Copy.css
+++ b/src/app/components/project/copy/Copy.css
@@ -17,3 +17,6 @@
         .mobile-details-copy .section h3 {
           font-size: 24px;
           line-height: 28px; } }
+    .mobile-details-copy .section:nth-child(even) {
+      background: #e6e6e6;
+      border: 1px solid #CCCCCC; }
