--- a/src/app/components/project/copy/Copy.css
+++ b/src/app/components/project/copy/Copy.css
@@ -1,22 +1,33 @@
 .mobile-details-copy {
-  background: url(/images/bg_bind.png) #ffffff; }
-  .mobile-details-copy .section {
-    padding: 50px 0;
-    text-align: center; }
-    @media (max-width: 1025px) {
-      .mobile-details-copy .section {
-        padding: 25px 0; } }
-    .mobile-details-copy .section h3 {
-      font-size: 28px;
-      line-height: 36px;
-      margin-bottom: 10px;
-      text-transform: uppercase;
-      font-weight: 900;
-      letter-spacing: 1.5px; }
-      @media (max-width: 769px) {
-        .mobile-details-copy .section h3 {
-          font-size: 24px;
-          line-height: 28px; } }
-    .mobile-details-copy .section:nth-child(even) {
-      background: #e6e6e6;
-      border: 1px solid #CCCCCC; }
+  z-index: 0;
+  position: relative;
+  background: #142544; }
+  .mobile-details-copy h4 {
+    color: #ffffff; }
+  .mobile-details-copy p {
+    font-size: 16px;
+    color: #CCCCCC; }
+  .mobile-details-copy h6 {
+    color: #ff234a; }
+  .mobile-details-copy .floating {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 10vw;
+    opacity: 0.01;
+    filter: alpha(opacity=1);
+    transition: all 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9);
+    overflow: hidden; }
+    .mobile-details-copy .floating > div {
+      background-repeat: no-repeat;
+      background-position: 50% 0;
+      background-size: 90%;
+      width: 100%;
+      height: 100%;
+      transform-origin: top center; }
+    .mobile-details-copy .floating.visible {
+      opacity: 0.03;
+      filter: alpha(opacity=3); }
+    .mobile-details-copy .floating.sticky > div {
+      background-attachment: fixed;
+      background-position: 50% 10vw; }
