--- a/src/app/components/project/copy/solve/Solve.css
+++ b/src/app/components/project/copy/solve/Solve.css
@@ -1,2 +1,122 @@
 .mobile-details-copy .solve {
-  text-align: left; }
+  background: #142544;
+  background: -webkit-linear-gradient(top, #142544 0%, #2f0d29 100%);
+  background: linear-gradient(to bottom, #142544 0%, #2f0d29 100%);
+  padding: 15vw 0 10vw 0; }
+  .mobile-details-copy .solve .group {
+    min-height: 30vw;
+    position: relative;
+    margin-bottom: 20vw; }
+    .mobile-details-copy .solve .group:last-child {
+      margin-bottom: 15vw; }
+    .mobile-details-copy .solve .group .details {
+      position: relative;
+      min-height: 30vw;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column; }
+      .mobile-details-copy .solve .group .details h6 {
+        width: 125px;
+        height: 125px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 21px;
+        margin-bottom: 30px; }
+        .mobile-details-copy .solve .group .details h6:after {
+          content: "";
+          position: absolute;
+          width: 100px;
+          height: 100px;
+          top: 12px;
+          left: 12px;
+          border: 3px solid #ff234a;
+          transform: rotate(45deg); }
+      .mobile-details-copy .solve .group .details > div {
+        width: 65%;
+        transform: translateX(50%);
+        margin-left: -125px;
+        max-height: 0px;
+        overflow: hidden;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        transition: all 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
+        @media (max-width: 769px) {
+          .mobile-details-copy .solve .group .details > div {
+            width: 100%;
+            margin-left: 0;
+            transform: translateX(0); } }
+        .mobile-details-copy .solve .group .details > div h4 {
+          text-align: left; }
+          @media (max-width: 769px) {
+            .mobile-details-copy .solve .group .details > div h4 {
+              text-align: center; } }
+        .mobile-details-copy .solve .group .details > div div.ta {
+          height: 40px;
+          background-repeat: no-repeat;
+          background-size: contain;
+          background-position: left bottom;
+          margin-bottom: 10px; }
+          @media (max-width: 769px) {
+            .mobile-details-copy .solve .group .details > div div.ta {
+              background-position: center bottom; } }
+        .mobile-details-copy .solve .group .details > div p {
+          text-align: justify; }
+      .mobile-details-copy .solve .group .details.visible > div {
+        max-height: 500px;
+        opacity: 1;
+        filter: alpha(opacity=100);
+        transition: all 1.2s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
+    .mobile-details-copy .solve .group .image {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center; }
+      .mobile-details-copy .solve .group .image > div {
+        position: absolute;
+        width: 30vw;
+        height: 30vw;
+        transform-origin: 50% 50%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+        transform: perspective(1000px) rotateY(0deg) translateX(0) scale(0.75);
+        transition: all 1.2s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
+        @media (max-width: 769px) {
+          .mobile-details-copy .solve .group .image > div {
+            display: none; } }
+        .mobile-details-copy .solve .group .image > div:after {
+          content: "";
+          display: block;
+          position: absolute;
+          background: rgba(0, 2, 34, 0.9);
+          width: 100.2%;
+          height: 100%;
+          transition: background 1.2s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
+      .mobile-details-copy .solve .group .image.visible > div {
+        transform: perspective(1000px) rotateY(10deg) translateX(-75%) scale(1); }
+        .mobile-details-copy .solve .group .image.visible > div:after {
+          background: rgba(0, 2, 34, 0.65); }
+    .mobile-details-copy .solve .group.reverse .image.visible > div {
+      transform: perspective(1000px) rotateY(-10deg) translateX(75%) scale(1); }
+    .mobile-details-copy .solve .group.reverse .details > div {
+      transform: translateX(-50%);
+      margin-right: -125px;
+      margin-left: 0; }
+      @media (max-width: 769px) {
+        .mobile-details-copy .solve .group.reverse .details > div {
+          transform: translateX(0%);
+          margin-right: 0;
+          margin-left: 0; } }
+      .mobile-details-copy .solve .group.reverse .details > div h4 {
+        text-align: right; }
+        @media (max-width: 769px) {
+          .mobile-details-copy .solve .group.reverse .details > div h4 {
+            text-align: center; } }
