--- a/src/app/components/project/copy/solve/Solve.scss
+++ b/src/app/components/project/copy/solve/Solve.scss
@@ -1,5 +1,190 @@
+@import 'app/styles/mixins.scss';
+@import 'app/styles/colors.scss';
+@import 'app/styles/transition.scss';
+@import 'app/styles/breakpoints.scss';
+
 .mobile-details-copy{
 	.solve{
-		text-align: left;
+		@include linear-gradient(to bottom, #142544 0%, #2f0d29 100% );
+		padding: 15vw 0 10vw 0;
+
+		.group{
+			min-height: 30vw;
+			position: relative;
+			margin-bottom: 20vw;
+
+			&:last-child{
+				margin-bottom: 15vw;
+			}
+
+			.details{
+				position: relative;
+				min-height: 30vw;
+				left: 50%;
+				transform: translateX(-50%);
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex-direction: column;
+
+				h6{
+					width: 125px;
+					height: 125px;
+					position: relative;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					font-size: 21px;
+					margin-bottom: 30px;
+
+					&:after{
+						content: "";
+						position: absolute;
+						width: 100px;
+						height: 100px;
+						top: 12px;
+						left: 12px;
+						border: 3px solid $primary-color;
+						transform: rotate(45deg);
+					}
+				}
+
+				&>div{
+					width: 65%;
+					transform: translateX(50%);
+					margin-left: -125px;
+					max-height: 0px;
+					overflow: hidden;
+					@include opacity (0);
+					transition: all $transition-speed $transition-ease;
+
+					@include sm(){
+						width: 100%;
+						margin-left: 0;
+						transform: translateX(0);
+					}
+
+					h4{
+						text-align: left;
+
+						@include sm(){
+							text-align: center;
+						}
+					}
+
+					div.ta{
+						height: 40px;
+						background-repeat: no-repeat;
+						background-size: contain;
+						background-position: left bottom;
+						margin-bottom: 10px;
+
+						@include sm(){
+							background-position: center bottom;
+						}
+					}
+
+					p{
+						text-align: justify;
+					}
+				}
+
+				&.visible{
+					&>div{
+						max-height: 500px;
+						@include opacity (1);
+						transition: all $transition-speed*3 $transition-ease;
+					}
+				}
+			}
+
+			.image{
+				height: 100%;
+				width: 100%;
+				position: absolute;
+				display: flex;
+				align-items: flex-start;
+				justify-content: center;
+
+
+				&>div{
+					position: absolute;
+					width:30vw;
+					height: 30vw;
+					transform-origin: 50% 50%;
+					background-size: cover;
+					background-repeat: no-repeat;
+					border: 1px solid rgba($white,.1);
+					box-shadow: 0 0 30px rgba(black,.2);
+					transform: perspective(1000px) rotateY(0deg) translateX(0) scale(.75);
+					// @include opacity(.3);
+					transition: all $transition-speed*3 $transition-ease;
+
+					@include sm(){
+						display: none;
+					}
+
+					&:after{
+						content: "";
+						display: block;
+						position: absolute;
+						background: rgba($black,.9);
+						width: 100.2%;
+						height: 100%;
+
+						transition: background $transition-speed*3 $transition-ease;
+					}
+				}
+
+				&.visible{
+					&>div{
+						transform: perspective(1000px) rotateY(10deg) translateX(-75%) scale(1);
+						// @include opacity(1);
+
+
+
+						&:after{
+							background: rgba($black,.65);
+
+						}
+					}
+				}
+			}
+
+			&.reverse{
+				.image{
+					&.visible{
+						&>div{
+							transform: perspective(1000px) rotateY(-10deg) translateX(75%) scale(1);
+						}
+					}
+				}
+
+				.details{
+					&>div{
+						transform: translateX(-50%);
+						margin-right: -125px;
+						margin-left: 0;
+
+						@include sm(){
+							transform: translateX(0%);
+							margin-right: 0;
+							margin-left: 0;
+						}
+
+						h4{
+							text-align: right;
+
+							@include sm(){
+								text-align: center;
+							}
+						}
+
+					}
+				}
+			}
+		}
+
+
 	}
 }
