--- a/src/app/components/project/copy/video/Video.scss
+++ b/src/app/components/project/copy/video/Video.scss
@@ -1,8 +1,141 @@
 @import 'app/styles/colors.scss';
+@import 'app/styles/mixins.scss';
+@import 'app/styles/breakpoints.scss';
 
 .mobile-details-copy{
-	.video{
-		background: $black !important;
-		color: $white;
+	& > .video{
+		width: 100%;
+		//height: 100vh;
+		background: url(/images/project_video.svg);
+		position: relative;
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+
+
+		.top{
+			height: 25vh;
+			// background: rgba(cyan,.1)
+		}
+
+		.content{
+			position: relative;
+			width: 100vw;
+			// display: flex;
+			// justify-content: center;
+			// padding-top: 9/16*100%;
+			// background: rgba(yellow,.1);
+
+			.floating{
+				top: 0vw;
+				&.visible{
+					@include opacity(.07);
+				}
+			}
+
+			.project{
+				// background: rgba(black, .3);
+				height: 100%;
+				width: 100%;
+				position: relative;
+				top: 0;
+				left: 0;
+				padding-top: 9/16*100%;
+				min-height: 500px;
+
+
+				.container, .wrapper{
+					height: 100%;
+					width: 100%;
+					position: absolute;
+					top: 0;
+					padding: 0;
+					margin: 0;
+				}
+
+				.wrapper > div{
+					padding-top: 9/16 * 100%;
+					width: 100%;
+					position: absolute;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					min-height: 400px;
+					max-width: 90vw;
+					left: 50%;
+					transform: translateX(-50%);
+
+					// @include sm(){
+					// 	height: 100%;
+					// 	background: yellow;
+					// }
+
+					video{
+						position: absolute;
+						top:0;
+						max-height: 100%;
+						background: $black;
+						border:1px solid $black;
+						box-shadow: 0 0 50px rgba($black,.35);
+						max-width: 90vw;
+
+						width: auto !important;
+						height: auto !important;
+					}
+
+
+					// .video-react{
+					// 	position: absolute;
+					// 	top: 0;
+					// 	height: 100%;
+					// 	width: 100%;
+					// 	overflow: hidden;
+					// 	// padding-top: 0 !important;
+					//
+					// 	video{
+					// 		border:1px solid $black;
+					// 		box-shadow: 0 0 50px rgba($black,.35);
+					// 		background: yellow;
+					// 		//height: 100%;
+					// 	}
+					// }
+				}
+			}
+		}
+
+
+		.bottom{
+			height: 25vh;
+			position: relative;
+			//height: 10px;
+			// position: absolute;
+			bottom: 0;
+			width: 100%;
+			// background: rgba(pink,.1);
+			// border-bottom: 1px solid $black;
+
+			.floating{
+				top: 0;
+				bottom: 0;
+
+				&.visible{
+					@include opacity(.07);
+				}
+
+				&>div{
+					background-position: center 100%;
+				}
+			}
+
+			&:after{
+				height: 10px;
+				width: 100%;
+				position: absolute;
+				bottom: 0;
+				border-bottom: 1px solid $black;
+				content: "";
+				display: block;
+				@include linear-gradient( to top, rgba($black,.15) 0%, rgba($black,0) 100%)
+			}
+		}
 	}
 }
