--- a/src/app/components/project/header/Header.scss
+++ b/src/app/components/project/header/Header.scss
@@ -6,11 +6,15 @@
 .mobile-detail-header{
 	position: relative;
 	overflow: hidden;
+	// z-index: 1;
+
+	// -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 80%, 50% 100%, 0 80%);
+	//clip-path: polygon(0% 0%, 100% 0, 100% 80%, 50% 100%, 0 80%);
 
 	transition: height $transition-speed $transition-ease;
 
 	.mask{
-		background: url(/images/marquee.svg);
+		background: url(/images/marquee_gradient.svg);
 		background-repeat: no-repeat;
 		background-position: center 100%;
 		background-size: cover;
@@ -44,14 +48,15 @@
 
 		& > div {
 			width: 50%;
-			margin-bottom: 75px;
+			margin-bottom: 10vh;
 
 			@include md(){
-				margin-bottom: 100px;
+				margin-bottom: 15vh;
 				width: 65%;
 			}
 
-			@include xs(){
+			@include sm(){
+				margin-bottom: 20vh;
 				//margin-bottom: 30px;
 			}
 		}
