--- a/src/app/components/desktop/projects/view/View.css
+++ b/src/app/components/desktop/projects/view/View.css
@@ -74,6 +74,10 @@ header a {
     width: 100%;
     height: 100%;
     position: absolute; }
+    @media (max-width: 2000px) {
+      .projects .cf {
+        padding-left: 125px;
+        padding-right: 125px; } }
   .projects .wrapper {
     margin: auto;
     height: 100%;
