--- a/src/app/components/desktop/projects/view/View.scss
+++ b/src/app/components/desktop/projects/view/View.scss
@@ -18,6 +18,11 @@ $project-layout-size: 1200px;
 		width: 100%;
 		height: 100%;
 		position: absolute;
+
+		@include lg(){
+			padding-left: 125px;
+			padding-right: 125px;
+		}
 	}
 	.wrapper{
 		margin:auto;
