--- a/src/app/components/project/copy/solve/Solve.css
+++ b/src/app/components/project/copy/solve/Solve.css
@@ -10,14 +10,19 @@
     .mobile-details-copy .solve .group:last-child {
       margin-bottom: 15vw; }
     .mobile-details-copy .solve .group .details {
-      position: relative;
+      position: absolute;
+      width: 100%;
       min-height: 30vw;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column; }
+      flex-direction: column;
+      z-index: 1000; }
+      @media (max-width: 769px) {
+        .mobile-details-copy .solve .group .details {
+          position: relative; } }
       .mobile-details-copy .solve .group .details h6 {
         width: 125px;
         height: 125px;
@@ -49,7 +54,8 @@
           .mobile-details-copy .solve .group .details > div {
             width: 100%;
             margin-left: 0;
-            transform: translateX(0); } }
+            transform: translateX(0);
+            max-height: 1000px; } }
         .mobile-details-copy .solve .group .details > div h4 {
           text-align: left; }
           @media (max-width: 769px) {
@@ -76,18 +82,23 @@
       width: 100%;
       position: absolute;
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: center; }
       .mobile-details-copy .solve .group .image > div {
         position: absolute;
         width: 30vw;
         height: 30vw;
+        top: 0;
+        left: 50%;
+        margin-left: -15vw;
         transform-origin: 50% 50%;
         background-size: cover;
         background-repeat: no-repeat;
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid #333;
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-        transform: perspective(1000px) rotateY(0deg) translateX(0) scale(0.75);
+        transform: translateX(0) scale(0.75);
+        opacity: 0;
+        filter: alpha(opacity=0);
         transition: all 1.2s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
         @media (max-width: 769px) {
           .mobile-details-copy .solve .group .image > div {
@@ -97,15 +108,17 @@
           display: block;
           position: absolute;
           background: rgba(0, 2, 34, 0.9);
-          width: 100.2%;
+          width: 100%;
           height: 100%;
           transition: background 1.2s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
       .mobile-details-copy .solve .group .image.visible > div {
-        transform: perspective(1000px) rotateY(10deg) translateX(-75%) scale(1); }
+        transform: translateX(-75%) scale(1);
+        opacity: 1;
+        filter: alpha(opacity=100); }
         .mobile-details-copy .solve .group .image.visible > div:after {
           background: rgba(0, 2, 34, 0.65); }
     .mobile-details-copy .solve .group.reverse .image.visible > div {
-      transform: perspective(1000px) rotateY(-10deg) translateX(75%) scale(1); }
+      transform: translateX(75%) scale(1); }
     .mobile-details-copy .solve .group.reverse .details > div {
       transform: translateX(-50%);
       margin-right: -125px;
