--- a/src/app/components/project/copy/solve/Solve.scss
+++ b/src/app/components/project/copy/solve/Solve.scss
@@ -17,8 +17,13 @@
 				margin-bottom: 15vw;
 			}
 
+			// @include sm(){
+			// 	//min-height: auto;
+			// }
+
 			.details{
-				position: relative;
+				position: absolute;
+				width: 100%;
 				min-height: 30vw;
 				left: 50%;
 				transform: translateX(-50%);
@@ -26,6 +31,12 @@
 				align-items: center;
 				justify-content: center;
 				flex-direction: column;
+				// background: pink;
+				z-index: 1000;
+
+				@include sm(){
+					position: relative;
+				}
 
 				h6{
 					width: 125px;
@@ -62,6 +73,8 @@
 						width: 100%;
 						margin-left: 0;
 						transform: translateX(0);
+						max-height: 1000px;
+						//background: yellow;
 					}
 
 					h4{
@@ -103,7 +116,7 @@
 				width: 100%;
 				position: absolute;
 				display: flex;
-				align-items: flex-start;
+				align-items: center;
 				justify-content: center;
 
 
@@ -111,13 +124,17 @@
 					position: absolute;
 					width:30vw;
 					height: 30vw;
+					top: 0;
+					left: 50%;
+					margin-left: -15vw;
 					transform-origin: 50% 50%;
 					background-size: cover;
 					background-repeat: no-repeat;
-					border: 1px solid rgba($white,.1);
+					border: 1px solid #333;
 					box-shadow: 0 0 30px rgba(black,.2);
-					transform: perspective(1000px) rotateY(0deg) translateX(0) scale(.75);
-					// @include opacity(.3);
+					//transform: perspective(1000px) rotateY(0deg) translateX(0) scale(.75);
+					transform: translateX(0) scale(.75);
+					@include opacity(0);
 					transition: all $transition-speed*3 $transition-ease;
 
 					@include sm(){
@@ -129,7 +146,7 @@
 						display: block;
 						position: absolute;
 						background: rgba($black,.9);
-						width: 100.2%;
+						width: 100%;
 						height: 100%;
 
 						transition: background $transition-speed*3 $transition-ease;
@@ -138,8 +155,9 @@
 
 				&.visible{
 					&>div{
-						transform: perspective(1000px) rotateY(10deg) translateX(-75%) scale(1);
-						// @include opacity(1);
+						//transform: perspective(1000px) rotateY(10deg) translateX(-75%) scale(1);
+						transform: translateX(-75%) scale(1);
+						@include opacity(1);
 
 
 
@@ -155,7 +173,8 @@
 				.image{
 					&.visible{
 						&>div{
-							transform: perspective(1000px) rotateY(-10deg) translateX(75%) scale(1);
+							//transform: perspective(1000px) rotateY(-10deg) translateX(75%) scale(1);
+							transform: translateX(75%) scale(1);
 						}
 					}
 				}
