--- a/src/app/components/project/copy/video/Video.css
+++ b/src/app/components/project/copy/video/Video.css
@@ -20,8 +20,10 @@
       position: relative;
       top: 0;
       left: 0;
-      padding-top: 56.25%;
-      min-height: 500px; }
+      padding-top: 56.25%; }
+      @media (max-width: 769px) {
+        .mobile-details-copy > .video .content .project {
+          padding-top: 75%; } }
       .mobile-details-copy > .video .content .project .container, .mobile-details-copy > .video .content .project .wrapper {
         height: 100%;
         width: 100%;
@@ -30,31 +32,39 @@
         padding: 0;
         margin: 0; }
       .mobile-details-copy > .video .content .project .wrapper > div {
-        padding-top: 56.25%;
+        height: 100%;
         width: 100%;
         position: absolute;
         display: flex;
         align-items: center;
         justify-content: center;
-        min-height: 400px;
         max-width: 90vw;
         left: 50%;
-        transform: translateX(-50%); }
+        transform: translateX(-50%);
+        top: 0; }
         .mobile-details-copy > .video .content .project .wrapper > div video {
-          position: absolute;
-          top: 0;
+          min-height: 100%;
           max-height: 100%;
-          background: #000222;
+          background: black;
           border: 1px solid #000222;
           box-shadow: 0 0 50px rgba(0, 2, 34, 0.35);
           max-width: 90vw;
           width: auto !important;
           height: auto !important; }
+          @media (max-width: 769px) {
+            .mobile-details-copy > .video .content .project .wrapper > div video {
+              background: transparent;
+              border: none;
+              box-shadow: none;
+              min-height: auto; } }
   .mobile-details-copy > .video .bottom {
-    height: 25vh;
+    height: 20vh;
     position: relative;
     bottom: 0;
     width: 100%; }
+    @media (max-width: 769px) {
+      .mobile-details-copy > .video .bottom {
+        height: 15vh; } }
     .mobile-details-copy > .video .bottom .floating {
       top: 0;
       bottom: 0; }
