--- a/src/app/components/project/copy/video/Video.scss
+++ b/src/app/components/project/copy/video/Video.scss
@@ -40,7 +40,11 @@
 				top: 0;
 				left: 0;
 				padding-top: 9/16*100%;
-				min-height: 500px;
+				//padding-top: 65%;
+
+				@include sm(){
+					padding-top: 75%;
+				}
 
 
 				.container, .wrapper{
@@ -53,16 +57,18 @@
 				}
 
 				.wrapper > div{
-					padding-top: 9/16 * 100%;
+					height: 100%;
+					// padding-top: 9/16 * 100%;
 					width: 100%;
 					position: absolute;
 					display: flex;
 					align-items: center;
 					justify-content: center;
-					min-height: 400px;
+					//min-height: 400px;
 					max-width: 90vw;
 					left: 50%;
 					transform: translateX(-50%);
+					top: 0;
 
 					// @include sm(){
 					// 	height: 100%;
@@ -70,16 +76,24 @@
 					// }
 
 					video{
-						position: absolute;
-						top:0;
+						// position: absolute;
+						// top:0;
+						min-height: 100%;
 						max-height: 100%;
-						background: $black;
+						background: black;
 						border:1px solid $black;
 						box-shadow: 0 0 50px rgba($black,.35);
 						max-width: 90vw;
 
 						width: auto !important;
 						height: auto !important;
+
+						@include sm(){
+							background: transparent;
+							border:none;
+							box-shadow: none;
+							min-height: auto;
+						}
 					}
 
 
@@ -104,7 +118,7 @@
 
 
 		.bottom{
-			height: 25vh;
+			height: 20vh;
 			position: relative;
 			//height: 10px;
 			// position: absolute;
@@ -112,6 +126,10 @@
 			width: 100%;
 			// background: rgba(pink,.1);
 			// border-bottom: 1px solid $black;
+
+			@include sm(){
+				height: 15vh;
+			}
 
 			.floating{
 				top: 0;
